--- a/advisory.html
+++ b/advisory.html
@@ -301,7 +301,7 @@
 </header>
 
 <div class="wrapper advisory">
-    <div class="image">
+    <div class="image rect">
         <img src="./images/yash.jpg" alt="">
     </div>
     <div class="card">
