--- a/advisory.html
+++ b/advisory.html
@@ -256,6 +256,7 @@
                                     <p>Committees</p><i style="margin-left: 10px;" class="fa fa-angle-down"></i>
                                     <ul class="dropDown" style="list-style: none; max-width: 300px">
                                         <li><a href="index.html#our-work">Conferences</a></li>
+                                        <li><a href="./executive.html">Executive Board</a></li>
                                         <li><a href="./awards.html" target="_blank">Awards</a></li>
                                     </ul></li>
                                 <li style="position: relative" class="downloads menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-114"
@@ -289,7 +290,7 @@
                 <div class="header-contacts">
                     <p><span class="header-contacts__txt"><i style="margin-right: 10px; font-size: 24px;" class="fa fa-envelope" aria-hidden="true"></i><a class="num" href="mailto:director@imsuc.ac.in">imsucmun@gmail.com</a></span>
                     </p>
-                    <p><span class="telNum"><i style="margin-right: 10px; font-size: 24px;" class="fa fa-phone-square" aria-hidden="true"></i><a class="header-contacts__txt num" href="tel:8384862159">(+91)8384862159</a></span></p>
+                    <p><span class="telNum"><i style="margin-right: 10px; font-size: 24px;" class="fa fa-phone-square" aria-hidden="true"></i><a class="header-contacts__txt num" href="tel:8384862159">(+91) 8384862159</a></span></p>
                 </div>
 
                 <!--                <div class="contact-form-trigger">-->
